# openCV-tutorial-model-detection

./: README.md
model_detection/: CMakeLists.txt  locateobj.cpp  rva.cpp  rva.h
